[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for the Local Produce Exchange"
requires-python = ">=3.14,<3.15"
dependencies = [
    "fastapi>=0.115,<1.0",
    "pydantic>=2.0,<3.0",
    "sqlalchemy>=2.0,<3.0",
    "uvicorn>=0.30,<1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.16",
]
