[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for Surplus: A Local Produce Exchange"
requires-python = ">=3.14,<3.15"
dependencies = [
    "alembic>=1.16,<2.0",
    "alembic-postgresql-enum>=1.3,<2.0",
    "bcrypt>=4.0,<5.0",
    "fastapi>=0.115,<1.0",
    "psycopg[binary]>=3.2,<4.0",
    "pydantic>=2.0,<3.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0,<3.0",
    "uvicorn>=0.30,<1.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.16",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
